# python-basics-hamrocsit

./: .gitignore  README.md  create_dirs.py  main.py  pyproject.toml  test.py
Day 1/: README.md  main.ipynb  main.py
Day 2/: README.md  main.ipynb
Day 3/: README.md  main.ipynb  simple_interest.py
Day 4/: README.md  main.ipynb  practice.ipynb  run.ipynb
Day 5/: README.md  abc.ipynb  assignment.py  day5.ipynb  loops.ipynb  main.ipynb  odd_or_even.py  practise5.ipynb  vote_eligible.py
Day 6/: README.md  loops.ipynb
Day 7/: README.md  funcitons.ipynb  main.py  mymodule.py
questions/: assignment.py  calculator.py  function_questions1.py  loops_question2.py  loops_questions.py  vote_eligible.py
students_solutions/: negative_number.py
students_solutions/bimala_solutions/: Age_solutions.py  assignment_solution.py  loop2_q1.py  loop2_q3.py  loop2_q5.py  odd_or_even_solution.py  q1_solution.py  q2_solution.py  q3_solution.py  q4_solutions.py  q5_solutions.py
students_solutions/mira_solutions/: assignment_solution.py  loop1.py  loop2.py  loop3.py  oddoreven.py  votep.py
students_solutions/tathastu_solutions/: city.py  factorial.py  loop2.py  multiplication_table.py  no4.py  numbers.py  qno3.py  square.py  sum.py
